# tor-network-plugin

./: README.md
android/: AndroidManifest.xml  README.md  build.gradle
android/src/: MainActivity.java  TorVpnService.java
core/config/: config.json
core/logging/: logger.py
core/tor/: README.md  tor_connector.cpp  tor_service.py
core/utils/: system_utils.py
docs/: README.md  installation.md  troubleshooting.md
ios/: Info.plist  Podfile
ios/src/: MainViewController.swift  README.md  TorVpnManager.swift
linux/: Makefile  README.md
linux/src/: TorVpnManager.c  TorVpnManager.h  main.c
macos/: README.md
macos/src/: TorVpnManager.swift  ViewController.swift
scripts/: README.md  setup.bat  setup.sh
windows/: CMakeLists.txt
windows/src/: README.md  TorService.cpp  TorVpnManager.cpp  main.cpp
